# AnalyticCisProp

./: .gitignore  Analytic_propagator.nb  MANIFEST.in  README.md  orbit_integrations.ipynb  setup.cfg
Formule/: sostfreq2.wl  sostsolnew.wl
analcisprop/: constants.py
analcisprop.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
analcisprop/propagators/: NormalForm.m  analytic_propagator.wl  cartesian_propagator.py  secular_propagator.py  secular_scipy.py
analcisprop/propagators/secular_equations/: dh_dt.py  dk_dt.py  dlM_dt.py  dp_dt.py  dq_dt.py
analcisprop/propagators/secular_equations/heyoka_equations/: hdot.txt  kdot.txt  lMdot.txt  pdot.txt  qdot.txt
analcisprop/spc/internal/mean2med/: a.txt  h.txt  k.txt  lM.txt  p.txt  q.txt
analcisprop/spc/internal/med2osc/: a.txt  h.txt  k.txt  lM.txt  p.txt  q.txt
analcisprop/utils/: spc.py  variable_changes.py
tests/: test_variable_changes.py
