[metadata]
name = analcisprop
version = 0.1.0
author = Edoardo Legnaro, Rita Mastroianni
author_email = your.email@example.com
description = Propagators for objects in the Cislunar Space
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edoardolegnaro/AnalyticCisProp.git
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    # numpy>=1.18.0
    # scipy>=1.4.0

[options.package_data]
analyticcisprop = spc/**/*.txt
